content/vault/v1.17.x/content/docs/secrets/databases/mysql-maria.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Vault and the Vault logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/web-unified-docs/blob/-/LICENSE

layout: docs
page_title: MySQL/MariaDB - Database - Secrets Engines
description: |-
  MySQL is one of the supported plugins for the database secrets engine. This
  plugin generates database credentials dynamically based on configured roles
  for the MySQL database.
---

# MySQL/MariaDB database secrets engine

@include 'x509-sha1-deprecation.mdx'

MySQL is one of the supported plugins for the database secrets engine. This
plugin generates database credentials dynamically based on configured roles for
the MySQL database, and also supports [Static
Roles](/vault/docs/secrets/databases#static-roles).

This plugin has a few different instances built into vault, each instance is for
a slightly different MySQL driver. The only difference between these plugins is
the length of usernames generated by the plugin as different versions of mysql
accept different lengths. The available plugins are:

- mysql-database-plugin
- mysql-aurora-database-plugin
- mysql-rds-database-plugin
- mysql-legacy-database-plugin

See the [database secrets engine](/vault/docs/secrets/databases) docs for
more information about setting up the database secrets engine.

## Capabilities

| Plugin Name                                                    | Root Credential Rotation | Dynamic Roles | Static Roles | Username Customization |
| -------------------------------------------------------------- | ------------------------ | ------------- | ------------ | ---------------------- |
| Depends (see: [above](#mysql-mariadb-database-secrets-engine)) | Yes                      | Yes           | Yes          | Yes (1.7+)             |

## Setup

1. Enable the database secrets engine if it is not already enabled:

   ```text
   $ vault secrets enable database
   Success! Enabled the database secrets engine at: database/
   ```

   By default, the secrets engine will enable at the name of the engine. To
   enable the secrets engine at a different path, use the `-path` argument.

1. Configure Vault with the proper plugin and connection information:

   ```text
   $ vault write database/config/my-mysql-database \
       plugin_name=mysql-database-plugin \
       connection_url="{{username}}:{{password}}@tcp(127.0.0.1:3306)/" \
       allowed_roles="my-role" \
       username="vaultuser" \
       password="vaultpass"
   ```

1. Configure a role that maps a name in Vault to an SQL statement to execute to
   create the database credential:

   ```text
   $ vault write database/roles/my-role \
       db_name=my-mysql-database \
       creation_statements="CREATE USER '{{name}}'@'%' IDENTIFIED BY '{{password}}';GRANT SELECT ON *.* TO '{{name}}'@'%';" \
       default_ttl="1h" \
       max_ttl="24h"
   Success! Data written to: database/roles/my-role
   ```

## Usage

After the secrets engine is configured and a user/machine has a Vault token with
the proper permission, it can generate credentials.

1. Generate a new credential by reading from the `/creds` endpoint with the name
   of the role:

   ```text
   $ vault read database/creds/my-role
   Key                Value
   ---                -----
   lease_id           database/creds/my-role/2f6a614c-4aa2-7b19-24b9-ad944a8d4de6
   lease_duration     1h
   lease_renewable    true
   password           yY-57n3X5UQhxnmFRP3f
   username           v_vaultuser_my-role_crBWVqVh2Hc1
   ```

## Client x509 certificate authentication

This plugin supports using MySQL's [x509 Client-side Certificate Authentication](https://dev.mysql.com/doc/refman/8.0/en/using-encrypted-connections.html#using-encrypted-connections-client-side-configuration)

To use this authentication mechanism, configure the plugin:

```shell-session
$ vault write database/config/my-mysql-database \
    plugin_name=mysql-database-plugin \
    allowed_roles="my-role" \
    connection_url="user:password@tcp(localhost:3306)/test" \
    tls_certificate_key=@/path/to/client.pem \
    tls_ca=@/path/to/client.ca
```

Note: `tls_certificate_key` and `tls_ca` map to [`ssl-cert (combined with ssl-key)`](https://dev.mysql.com/doc/refman/8.0/en/connection-options.html#option_general_ssl-cert)
and [`ssl-ca`](https://dev.mysql.com/doc/refman/8.0/en/connection-options.html#option_general_ssl-ca) configuration options
from MySQL with the exception that the Vault parameters are the contents of those files, not filenames. As such,
the two options are independent of each other. See the [MySQL Connection Options](https://dev.mysql.com/doc/refman/8.0/en/connection-options.html)
for more information.

## Examples

### Using wildcards in grant statements

MySQL supports using wildcards in grant statements. These are sometimes needed
by applications which expect access to a large number of databases inside MySQL.
This can be realized by using a wildcard in the grant statement. For example if
you want the user created by Vault to have access to all databases starting with
`fooapp_` you could use the following creation statement:

```text
CREATE USER '{{name}}'@'%' IDENTIFIED BY '{{password}}'; GRANT SELECT ON `fooapp\_%`.* TO '{{name}}'@'%';
```

MySQL expects the part in which the wildcards are to be placed inside backticks.
If you want to add this creation statement to Vault via the Vault CLI you cannot
simply paste the above statement on the CLI because the shell will interpret the
text between the backticks as something that must be executed. The easiest way to
get around this is to encode the creation statement as Base64 and feed this to Vault.
For example:

```shell-session
$ vault write database/roles/my-role \
    db_name=mysql \
    creation_statements="Q1JFQVRFIFVTRVIgJ3t7bmFtZX19J0AnJScgSURFTlRJRklFRCBCWSAne3twYXNzd29yZH19JzsgR1JBTlQgU0VMRUNUIE9OIGBmb29hcHBcXyVgLiogVE8gJ3t7bmFtZX19J0AnJSc7" \
    default_ttl="1h" \
    max_ttl="24h"
```

### Rotating root credentials in MySQL 5.6

The default root rotation setup for MySQL uses the `ALTER USER` syntax present
in MySQL 5.7 and up. For MySQL 5.6, the [root rotation
statements](/vault/api-docs/secret/databases#root_rotation_statements)
must be configured to use the old `SET PASSWORD` syntax. For example:

```shell-session
$ vault write database/config/my-mysql-database \
    plugin_name=mysql-database-plugin \
    connection_url="{{username}}:{{password}}@tcp(127.0.0.1:3306)/" \
    root_rotation_statements="SET PASSWORD = PASSWORD('{{password}}')" \
    allowed_roles="my-role" \
    username="root" \
    password="mysql"
```

For a guide in root credential rotation, see [Database Root Credential
Rotation](/vault/tutorials/db-credentials/database-root-rotation).

## API

The full list of configurable options can be seen in the [MySQL database plugin
API](/vault/api-docs/secret/databases/mysql-maria) page.

For more information on the database secrets engine's HTTP API please see the
[Database secrets engine API](/vault/api-docs/secret/databases) page.

## Authenticating to Cloud DBs via IAM

### Google Cloud

Aside from IAM roles denoted by [Google's CloudSQL documentation](https://cloud.google.com/sql/docs/postgres/add-manage-iam-users#creating-a-database-user),
the following SQL privileges are needed by the service account's DB user for minimum functionality with Vault.
Additional privileges may be needed depending on the SQL configured on the database roles.

```sql
-- Enable service account to create users within DB
GRANT SELECT, CREATE, CREATE USER ON <database>.<object> TO "test-user"@"%" WITH GRANT OPTION;
```

### Setup

1.  Enable the database secrets engine if it is not already enabled:

    ```shell-session
    $ vault secrets enable database
    Success! Enabled the database secrets engine at: database/
    ```

    By default, the secrets engine will enable at the name of the engine. To
    enable the secrets engine at a different path, use the `-path` argument.

1.  Configure Vault with the proper plugin and connection information. Here you can explicitly enable GCP IAM authentication
    and use [Application Default Credentials](https://cloud.google.com/docs/authentication/provide-credentials-adc#how-to) to authenticate.

    ~> **Note**: For Google Cloud IAM, the Protocol is `cloudsql-mysql` instead of `tcp`.

    ```shell-session
    $ vault write database/config/my-mysql-database \
        plugin_name="mysql-database-plugin" \
        allowed_roles="my-role" \
        connection_url="user@cloudsql-mysql(project:region:instance)/mysql" \
        auth_type="gcp_iam"
    ```

    You can also configure the connection and authenticate by directly passing in the service account credentials
    as an encoded JSON string:

    ```shell-session
    $ vault write database/config/my-mysql-database \
        plugin_name="mysql-database-plugin" \
        allowed_roles="my-role" \
        connection_url="user@cloudsql-mysql(project:region:instance)/mysql" \
        auth_type="gcp_iam" \
        service_account_json="@my_credentials.json"
    ```

1.  Configure a new role in Vault but override the default revocation statements
    so Vault will drop the user instead:

    ```shell-session
       $ vault write database/roles/my-role \
           db_name=my-mysql-database \
           creation_statements="CREATE USER '{{name}}'@'%' IDENTIFIED BY '{{password}}';GRANT SELECT ON *.* TO '{{name}}'@'%';" \
           revocation_statements="DROP USER '{{name}}'@'%';" \
           default_ttl="1h" \
           max_ttl="24h"
    ```

1.  When you finish configuring the new role, generate credentials as before:

    ```shell-session
       $ vault read database/creds/my-role
       Key                Value
       ---                -----
       lease_id           database/creds/my-role/2f6b629f-7ah2-7b19-24b9-ad879a8d4bf2
       lease_duration     1h
       lease_renewable    true
       password           vY-57n3X5UQhxnmGTK7g
       username           v_vaultuser_my-role_frBYNfYh3Kw3
    ```
